CI: added spack environment for dependency isolation.
Due to other pipeline uninstalling and reinstalling mpc spack
dependencies (from repo mpc_spack_repo), this made spack load fail
during mpc installation. Thus recompiling mpcalloc and
mpc-compiler-additions.
Using a spack env, we isolate this. The problem is that this environment
needs to be updated manually directly on the Gitlab agent.
It could also be interesting to create an environment for each mpc
branch, so that each one may have its own mpc dependency env?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,7 @@ Artifact Deletion:
   when: on_success
   script:
     - rm -rf $GL_PIPELINE_PATH
+    - spack env deactivate
     - $HOME/clean_old_pipelines.sh
 
 Resource Relinquishing:
@@ -97,6 +98,7 @@ Resource Relinquishing:
 .conf_run_cmds: &configuration_commands
   - rm -rf ${GL_LOCAL_BUILD_DIR} ${GL_LOCAL_INSTALL_DIR}
   - mkdir ${GL_LOCAL_BUILD_DIR}; cd ${GL_LOCAL_BUILD_DIR}
+  - spack env activate mpc
   - ${CI_PROJECT_DIR}/installmpc -vv --force-spack-arch=x86_64_v2 --prefix=${GL_LOCAL_INSTALL_DIR} ${GL_INSTALL_OPTS}
 
 
