--- a/tests/mpi/pcvs.yml
+++ b/tests/mpi/pcvs.yml
@@ -1,56 +1,32 @@
 send_rdv_multiple:
   build:
-    cflags: -g -O0
     files: ./send_rdv_multiple.c
-    sources: {binary: send_rdv_multiple}
+    sources:
+      binary: send_rdv_multiple
+      cflags: -g -O0
   run:
     program: @SRCPATH@/script.sh @BUILDPATH@/send_rdv_multiple
-    iterate: 
-      n_core:
-        values: [2, 4]
-      n_node:
-        values: [2, 4]
-      n_proc:
-        values: [2, 4]
 send_rdv_sym:
   build:
-    cflags: -g -O0
     files: ./send_rdv_sym.c
-    sources: {binary: send_rdv_sym}
+    sources:
+      binary: send_rdv_sym
+      cflags: -g -O0
   run:
     program: @SRCPATH@/script.sh @BUILDPATH@/send_rdv_sym
-    iterate: 
-      n_core:
-        values: [2]
-      n_proc: 
-        values: [2]
-      n_node: 
-        values: [2]
 send_rdv_unsym:
   build:
-    cflags: -g -O0
     files: ./send_rdv_unsym.c
-    sources: {binary: send_rdv_unsym}
+    sources:
+      binary: send_rdv_unsym
+      cflags: -g -O0
   run:
     program: @SRCPATH@/script.sh @BUILDPATH@/send_rdv_unsym
-    iterate: 
-      n_core:
-        values: [2]
-      n_proc: 
-        values: [2]
-      n_node: 
-        values: [2]
 partitioned:
   build:
-    cflags: -g -O0
     files: ./partitioned.c
-    sources: {binary: partitioned}
+    sources:
+      binary: partitioned
+      cflags: -g -O0
   run:
     program: @SRCPATH@/script.sh @BUILDPATH@/partitioned
-    iterate: 
-      n_core:
-        values: [2]
-      n_proc: 
-        values: [2]
-      n_node: 
-        values: [2]
