TBSM: implementation of driver oriented (tbsm) thread communication.
First solution, which actually did not required as much dev as planned,
is to have a dedicated lcp endpoint for local task so that we can attach
a queue on each endpoint. Then, we pushing a package in the queue, only
the queue of this particular endpoint will be locked.

--- a/configure.ac
+++ b/configure.ac
@@ -974,6 +974,9 @@ fi
 
 AM_CONDITIONAL([MPC_BUILD_OPENPA], [test "x$build_openpa" = "xyes"])
 
+MPC_DETECT_DEPENDENCY([ck_stack.h],[ck], [ck_stack_pop_upmc], [CK], [], [], [ck])
+MPC_REQUIRED_DEPENDENCY([ck], [$mpc_dep_found])
+
 #
 # Detect MPC Allocator
 #
