LLVM OpenMP runtime compatibility
This branch add fixe to make MPC_Thread to work with the OpenMP runtime of LLVM.

This branch do the following:

* Add MPC_Thread binding for waiting according to a [specific clock](https://www.gnu.org/software/libc/manual/html_node/Waiting-with-Explicit-Clocks.html). (will probably need to add implementations later but none of the function seems to be call)
* Add `atfork` function. LLVM OpenMP runtime only call `atfork` to reinitialize itself on a processes fork. So passing the call directly to pthread regardless of the implementation should work.
* Change the start index for binding of (user thread to virtual processor) to avoid live lock.

--- a/configure.ac
+++ b/configure.ac
@@ -1977,6 +1977,8 @@ AC_CHECK_FUNCS(pthread_kill)
 AC_CHECK_FUNCS(sched_get_priority_max)
 AC_CHECK_FUNCS(sched_get_priority_min)
 
+AC_CHECK_FUNCS(pthread_getattr_np)
+
 #
 # Configure MPC_Arch
 #
