MPIRUN: Implement Python mpirun
Co-authored-by: Rémi Dehenne <remi.dehenne@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -3350,6 +3350,7 @@ AC_OUTPUT([Makefile
            src/bin/mpc_cflags
            src/bin/mpc_ldflags
            src/bin/mpcrun
+           src/bin/mpirun
            src/bin/mpcvars.sh
            src/bin/mpc_status
            pkgconfig/Makefile
