OpenMP: towards stabilizing tasking runtime
Here is an exhaustive list I made by reading diffs between `devel` and `cea/these/pereirar-dev` :

* Added a missing symbol `__kmp_invoke_microtask` that can sometimes be introduced by LLVM compiler
* Updated uthash.h dependency
* Removed built-in tracing in the MPC-MPI runtime (a PMPI tool with the same behavior is available at https://gitlab.paratools.com/these_pereirar/tools/-/tree/master/mpc/task/mpi)
* Added mpc_omp_interop_mpi.h and mpc_omp_interop_cuda.h as header file so user program can use MPIX_Wait and CuxStreamSynchronize within MPC-OMP tasks without blocking the executing thread
* Added support for the `detach` clause on the `task` construct (and `taskwait` as part of the IWOMP'23 paper)
* Added a scope (THREAD, INSTANCE) for progression callback so they are raised only once (per THREAD, or per OpenMP runtime instance)
* Renamed `fiber` to `ucontext`
* Added an interface to modify the current task dependency hashing function
* Changed format of MPI-related task records
* Added support for taskgroup and task cancellation (# pragma omp cancel taskgroup)
* Added several parameters:
  * dry_run to skip task bodies
  * related to tracing (output name, a mask for traced events, and the recycler capacity)
  * to sleep threads (at the kernel level) while synchronizing (disabled by default)
  * to set the default dependency hashing function
  * to control when the priority back-propagation in the TDG should occur (synchronous = on task creatio, asynchronous = during idle periods)
  * to display OpenMP threads binding to physical core
* Changed default scheduling policy to "HIERARCHICAL" (used to be "PRODUCER")
* Modified task successors data structures (used to be linked list, now is an array list) : significant performance gain here
* Moved coherency tests into `assert()` calls so they are automatically optimized-out with NDEBUG set
* Added a 'state' variable that fully track task states (see Figure 3.2 of my manuscri

--- a/src/MPC_Lowcomm/src/Makefile.am
+++ b/src/MPC_Lowcomm/src/Makefile.am
@@ -50,7 +50,12 @@ lib_LTLIBRARIES = libmpclowcomm.la
 # low-level communication #
 libmpclowcomm_la_SOURCES = coll.c comm.c checksum.c ft.c group.c communicator.c shm_coll.c lowcomm_config.c alloc_mem.c
 libmpclowcomm_la_SOURCES += lowcomm.c msg_cpy.c lowcomm_thread.c mqd.c datatypes_common.c
-libmpclowcomm_la_SOURCES += rail.c reorder.c endpoint.c sctk_window.c workshare.c pset.c handle_ctx.c
+libmpclowcomm_la_SOURCES += rail.c reorder.c endpoint.c sctk_window.c pset.c handle_ctx.c
+
+if ENABLE_WORKSHARE
+libmpclowcomm_la_SOURCES += workshare.c
+endif
+
 
 libmpclowcomm_la_SOURCES += ./cplane/auth.c ./cplane/peer.c  ./cplane/proto.c ./cplane/port.c
 libmpclowcomm_la_SOURCES += ./cplane/monitor.c  ./cplane/set.c ./cplane/uid.c ./cplane/name.c
