--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,6 +264,15 @@ Lowcomm:
     - *pcvs_prepare
     - ${PCVS_COMMAND} $HOME/repo/mpc_ci/lowcomm/
 
+OpenMP Tasking:
+  <<: *run_by_main
+  <<: *uses_slurm
+  stage: Regular Testing
+  script:
+    - *pcvs_prepare
+    - ${PCVS_COMMAND} $HOME/repo/mpc_ci/OpenMP/task/examples $HOME/repo/mpc_ci/OpenMP/task/cholesky
+  allow_failure: true
+
 #
 # Benchmarks
 #
