WIP. LCP: communication manager for software communication context.
Most low level transport API (IB, Portals, OFI) feature software
communication context over the same device. In other words, it means it
is possible to do init time on the same device, thus having separate
data structures to interact with (Polling Queues, endpoints,...).

One advantage is the possibility to instanciate rails for different
communication context such as MPI_Win or the MPI PML, thus offering
finer grain to handle outstanding operations, progression,... Some
optimization in the design of the one-sided could also take advantage of
this.

To do so, we introduce a new LCP datastructure called the manager
(lcp_manager_h). As of now, an lcp_context_h is responsible to discover
the physical device (through a call to component_query) while the
lcp_manager_h will instanciate the different rails (through a call to
iface_open). Flags can be passed during manager creation
(LCP_MANAGER_TSC_MODEL, LCP_MANAGER_OSC_MODEL) to give hints on which
progress engine should be instanciated. For example, during windows
creation one may only need the One-Sided model, allowing for better
resource management.

CHANGES:
- refacto in lcp_rndv.c: moved memory registration to
  lcp_send_rndv_start since TAG and AM layer should not be responsible
  for that.
- context init: refacto of the configuration and device loading. Instead
  of instanciating lcr_component, we added new components within the
  rails to accomodate for the multiple providers of OFI.
- cli: modified portals CLI, now ptl and mptl (for matching portals)
  instead of portals4. Offloading was previously set as env variable,
  but it should be available from the command line.
- ptl: refacto, lightweight RMA and context isolation:
  - refacto: all portals code has been moved to ptl directory since all
    previous code was obsolete with the use of LCP.
  - context isolation: to comply with the manager's communication context
    feature, addressing in p

--- a/src/MPC_Lowcomm/src/Makefile.am
+++ b/src/MPC_Lowcomm/src/Makefile.am
@@ -68,15 +68,12 @@ libmpclowcomm_la_LIBADD =  $(ALLOC_LIBS) ../../MPC_Launch/src/libmpclaunch.la -l
 #
 
 # LCP #
-if LCP_ENABLED
 AM_CPPFLAGS += -I$(abs_srcdir)/tbsm/
-AM_CPPFLAGS += -I$(abs_srcdir)/lcp/
-AM_CPPFLAGS += -I$(abs_srcdir)/lcr/
+AM_CPPFLAGS += -I$(abs_srcdir)/lcp/ -I$(abs_srcdir)/lcr/
 libmpclowcomm_la_SOURCES += ./tbsm/tbsm.c
 libmpclowcomm_la_SOURCES += ./lcp/lcp_context.c ./lcp/lcp_ep.c ./lcp/lcp_pending.c ./lcp/lcp_progress.c ./lcp/lcp_recv.c ./lcp/lcp_send.c ./lcp/lcp_tag_lists.c ./lcp/lcp_datatype.c ./lcp/lcp_probe.c ./lcp/lcp_eager.c ./lcp/lcp_am.c
-libmpclowcomm_la_SOURCES += ./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c ./lcp/lcp_request.c ./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c ./lcp/lcp_rma.c ./lcp/lcp_task.c ./lcp/lcp_tag_match.c
+libmpclowcomm_la_SOURCES += ./lcp/lcp_tag_matching.c ./lcp/lcp_tag.c ./lcp/lcp_request.c ./lcp/lcp_rndv.c ./lcp/lcp_tag_offload.c ./lcp/lcp_mem.c ./lcp/lcp_rma.c ./lcp/lcp_task.c ./lcp/lcp_tag_match.c ./lcp/lcp_manager.c
 libmpclowcomm_la_SOURCES += ./lcr/lcr_component.c ./shm/mpc_shm.c
-endif
 
 #AM Extensions #
 if MPC_HAVE_AM
@@ -90,16 +87,8 @@ libmpclowcomm_la_SOURCES += ./tcp/tcp.c ./tcp/tcp_toolkit.c
 
 # PTL driver #
 if PORTALS4_DRIVER_ENABLED
-AM_CPPFLAGS += -I$(abs_srcdir)/portals/
-libmpclowcomm_la_SOURCES += ./portals/sctk_portals.c ./portals/sctk_ptl_cm.c ./portals/sctk_ptl_eager.c
-libmpclowcomm_la_SOURCES += ./portals/sctk_ptl_iface.c ./portals/sctk_ptl_offcoll.c ./portals/sctk_ptl_rdma.c
-libmpclowcomm_la_SOURCES += ./portals/sctk_ptl_rdv.c ./portals/sctk_ptl_toolkit.c
-if LCP_ENABLED
-libmpclowcomm_la_SOURCES += ./portals/lcr_ptl.c ./portals/lcr_ptl_recv.c ./portals/lcr_ptl_iface.c
-endif
-
-# PTL-AM driver #
-libmpclowcomm_la_SOURCES += ./portals_am/sctk_ptl_am_iface.c  ./portals_am/sctk_ptl_am_toolkit.c ./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c
+AM_CPPFLAGS += -I$(abs_srcdir)/ptl/
+libmpclowcomm_la_SOURCES += ./ptl/ptl_ep.c ./ptl/ptl_iface.c ./ptl/ptl_recv.c ./ptl/ptl_rd.c
 endif
 
 # OFI Driver #
