--- a/src/MPC_MPI/src/Makefile.am
+++ b/src/MPC_MPI/src/Makefile.am
@@ -47,6 +47,8 @@ endif
 
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/tcp/
 AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/shm/
+AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/lcr/
+AM_CPPFLAGS += -I$(abs_top_srcdir)/src/MPC_Lowcomm/src/lcp/
 
 
 lib_LTLIBRARIES = libmpcmpi.la
@@ -54,10 +56,6 @@ lib_LTLIBRARIES = libmpcmpi.la
 libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c mpc_mpi_halo.c mpc_reduction.c mpi_rma.c mpi_rma_win.c mpit.c
 libmpcmpi_la_SOURCES += datatype.c egreq_progress.c mpc_info.c mpc_nbc.c mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c mgroup.c
 libmpcmpi_la_SOURCES += egreq_classes.c mpc_cs.c mpc_mpi.c mpc_nbc_progress_thread_binding.c  mpi_rma_epoch.c mpc_nbc_reduction.cpp
-
-if LCP_ENABLED
-libmpcmpi_la_SOURCES += ./mpi_partitioned.c
-endif
 
 if MPC_FORTRAN_ENABLED
    libmpcmpi_la_SOURCES += fortran.c
