WIP. PTL: feat. token-based control flow for portals.
NOTE: only tested :
- locally with buggy sandia simulator with UDP, probably
  unreliability of UDP is causing some packet loss. Then, some
  tokens are not released appropriately and deadlocks arrives.
- in process-based

FEATURE: token-based control flow:
- sender issues a token request before being able to send a message.
  Sender provides the number of pending requests with the token request.
- receiver grants a number of token to the sender depending of the
  availability of token in the pool, of user configuration (token
  chunks), of the number of pending requests of sender.
- when receiver receives token request, it pushed the request to an
  "exhausted" queue. Then, token distribution is round-robin between all
  the exhausted queues.

--- a/configure.ac
+++ b/configure.ac
@@ -1141,6 +1141,17 @@ fi
 
 AM_CONDITIONAL([PORTALS4_DRIVER_ENABLED], [test "x$portals4_enabled" = "xyes"])
 
+AC_ARG_ENABLE([ptl-control-flow],
+              [AS_HELP_STRING([--enable-ptl-control-flow],
+                              [Enable control flow with portals4])],
+              [enable_portal4_control_flow=$enableval],
+              [enable_portal4_control_flow=maybe])
+
+AM_CONDITIONAL([PORTALS4_CONTROL_FLOW_ENABLED], [test "x$enable_portal4_control_flow" = "xyes"])
+if test "x$enable_portal4_control_flow" = "xyes"; then
+    AC_DEFINE([MPC_USE_PORTALS_CONTROL_FLOW], [1], [Portals control flow support is enabled])
+fi
+
 AC_SUBST([MPC_NETWORK_LIST])
 
 #
