--- a/src/MPC_Lowcomm/src/Makefile.am
+++ b/src/MPC_Lowcomm/src/Makefile.am
@@ -89,6 +89,9 @@ libmpclowcomm_la_SOURCES += ./tcp/tcp.c ./tcp/tcp_toolkit.c
 if PORTALS4_DRIVER_ENABLED
 AM_CPPFLAGS += -I$(abs_srcdir)/ptl/
 libmpclowcomm_la_SOURCES += ./ptl/ptl_ep.c ./ptl/ptl_iface.c ./ptl/ptl_recv.c ./ptl/ptl_rd.c
+if PORTALS4_CONTROL_FLOW_ENABLED
+libmpclowcomm_la_SOURCES += ./ptl/ptl_tk.c
+endif
 endif
 
 # OFI Driver #
