--- a/src/MPC_Tests/mpi/pcvs.yml
+++ b/src/MPC_Tests/mpi/pcvs.yml
@@ -1,3 +1,11 @@
+send_eager_control_flow:
+  build:
+    files: ./send_eager_control_flow.c
+    sources:
+      binary: send_eager_control_flow 
+      cflags: -g -O0
+  run:
+    program: @SRCPATH@/script.sh @BUILDPATH@/send_eager_control_flow
 send_rdv_multiple:
   build:
     files: ./send_rdv_multiple.c
