WIP: LCP: fix. compilation errors.

--- a/src/MPC_MPI/src/Makefile.am
+++ b/src/MPC_MPI/src/Makefile.am
@@ -57,6 +57,8 @@ libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c mpc_mpi_halo.c mpc_
 libmpcmpi_la_SOURCES += datatype.c egreq_progress.c mpc_info.c mpc_nbc.c mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c mgroup.c
 libmpcmpi_la_SOURCES += egreq_classes.c mpc_cs.c mpc_mpi.c mpc_nbc_progress_thread_binding.c  mpi_rma_epoch.c mpc_nbc_reduction.cpp
 
+libmpcmpi_la_SOURCES += ./mpi_partitioned.c
+
 if MPC_FORTRAN_ENABLED
    libmpcmpi_la_SOURCES += fortran.c
 endif
